<resources>
    <string name="text_box_my_location">My location</string>
    <string name="text_box_start_location_hint">Start location</string>
    <string name="text_box_end_location_hint">End location</string>
    <string name="text_box_need_to_place_marker">Add a position marker&#8230;</string>
    <string name="text_box_close_to_marker">Marker, close to</string>
    <string name="text_box_dialog_choose_location_type_start">Choose start location</string>
    <string name="text_box_dialog_choose_location_type_end">Choose end location</string>
    <string name="text_box_dialog_location_type_current_location">Current location</string>
    <string name="text_box_dialog_location_type_contact">Contact address</string>
    <string name="text_box_dialog_location_type_map_point">Point on map</string>
    <string name="text_box_virtual_keyboard_done_label">GO!</string>
    <string name="map_markers_start_marker_title">Route start</string>
    <string name="map_markers_start_marker_description">Long press to drag&#8230;</string>
    <string name="map_markers_end_marker_title">Route end</string>
    <string name="map_markers_end_marker_description">Long press to drag&#8230;</string>
    <string name="map_markers_mode_bicycle_action">Ride</string>
    <string name="map_markers_mode_walk_action">Walk</string>
    <string name="map_markers_connector_before_stop">from</string>
    <string name="map_markers_connector_before_destination">to</string>
    <string name="map_markers_warning_live_udpates">Live updates</string>
    <string name="map_markers_warning_live_upates_on_time">On time</string>
    <string name="map_markers_warning_live_upates_early_arrival">early</string>
    <string name="map_markers_warning_live_upates_late_arrival">delay</string>
    <string name="map_markers_wikipedia">Tap this baloon to get more info.</string>
    <string name="map_markers_bike_rental_available_spaces">Slots:</string>
    <string name="map_markers_bike_rental_available_bikes">Bikes:</string>
    <string name="toast_map_markers_start_marker_activated">Start location</string>
    <string name="toast_map_markers_end_marker_activated">End location</string>
    <string name="toast_map_markers_marker_out_of_boundaries">Location outside of network boundaries. Marker not set.</string>
    <string name="toast_metadata_request_successful">Transit service downloaded</string>
    <string name="toast_server_checker_successful">OK: Region is working</string>
    <string name="toast_bike_rental_load_request_successful">Bike rental stations downloaded</string>
    <string name="toast_server_selector_detected">Found</string>
    <string name="toast_server_selector_server_change_info">Change in Settings</string>
    <string name="toast_tripplanner_need_to_place_markers_before_planning">Set an origin and destination first</string>
    <string name="toast_tripplanner_origin_destination_are_equal">Can\'t plan: origin and destination are the same"</string>
    <string name="toast_server_selector_refresh_server_list_error">Couldn\'t get region list</string>
    <string name="toast_bike_rental_load_request_error">Couldn\'t get bike rental stations</string>
    <string name="toast_no_server_selected_error">No region selected</string>
    <string name="toast_server_checker_error_unreachable">Unable to contact region:</string>
    <string name="toast_server_checker_info_error">Attention: Cannot obtain region info!</string>
    <string name="toast_server_checker_error_unreachable_detected_server">Your region server is not working. Please try again later.</string>
    <string name="toast_server_checker_error_bad_url">Bad URL for custom region</string>
    <string name="toast_tripplanner_current_location_error">Can\'t find current location</string>
    <string name="toast_realtime_updates_fail">Realtime updates not available for this trip, times might be outdated</string>
    <string name="task_progress_tripplanner_progress">Planning trip. Please wait&#8230;</string>
    <string name="task_progress_server_selector_progress">Finding transit service. Please wait&#8230;</string>
    <string name="task_progress_server_checker_progress">Getting region info. Please wait&#8230;</string>
    <string name="task_progress_geocoding_progress">Finding points-of-interest. Please wait&#8230;</string>
    <string name="task_progress_metadata_progress">Finding transit service. Please wait&#8230;</string>
    <string name="task_progress_tripplanner_canceled">Canceling trip research&#8230;</string>
    <string name="tripplanner_results_title">Planning Results</string>
    <string name="point_type_selector_title">Choose location</string>
    <string name="point_type_selector_start_marker_option">Start location</string>
    <string name="point_type_selector_end_marker_option">End location</string>
    <string name="geocoder_results_title">Search Results</string>
    <string name="geocoder_results_no_results_message">Sorry, a location for this address couldn\'t be found.</string>
    <string name="server_checker_info_title">OpenTripPlanner Region</string>
    <string name="server_checker_info_region">Region:</string>
    <string name="server_checker_info_language">Language:</string>
    <string name="server_checker_info_contact">Contact:</string>
    <string name="server_checker_info_url">URL:</string>
    <string name="server_checker_info_bounds">Bounds:</string>
    <string name="server_checker_info_bike_rental">Bike rental service:</string>
    <string name="server_checker_info_reachable">Online:</string>
    <string name="server_checker_info_custom_server_name">Custom region</string>
    <string name="server_checker_info_custom_server_unknown_region">Unknown</string>
    <string name="server_checker_info_custom_server_unknown_bounds">Unknown</string>
    <string name="server_checker_info_custom_server_unknown_language">Unknown</string>
    <string name="server_checker_info_custom_server_unknown_name">Unknown </string>
    <string name="server_checker_info_custom_server_unknown_email">unknown email</string>
    <string name="server_checker_info_custom_server_unknown_bike_rental">Unknown</string>
    <string name="server_selector_custom_server_alert_title">Enter a custom OTP region URL</string>
    <string name="date_time_selector_title">Set date and time</string>
    <string name="date_time_selector_spinner_arrive">Arrive at:</string>
    <string name="date_time_selector_spinner_depart">Depart at:</string>
    <string name="tripplanner_error_dialog_title">Planning not possible</string>
    <string name="tripplanner_error_not_defined">Sorry, something went wrong.  Please try again.</string>
    <string name="tripplanner_error_request_timeout">Region is not responding, please try again later</string>
    <string name="tripplanner_error_system">Region is offline, please try again later</string>
    <string name="tripplanner_error_outside_bounds">Origin or destination is outside transportation network coverage</string>
    <string name="tripplanner_error_path_not_found">Couldn\'t find a matching route between origin and destination</string>
    <string name="tripplanner_error_no_transit_times">Transit times for selected date are not available</string>
    <string name="tripplanner_error_bogus_parameter">Something went wrong.  Change your trip options and try again.</string>
    <string name="tripplanner_error_geocode_from_not_found">Origin not found</string>
    <string name="tripplanner_error_geocode_to_not_found">Destination not found</string>
    <string name="tripplanner_error_geocode_from_to_not_found">Origin and destination not found</string>
    <string name="tripplanner_error_too_close">Trip is too short</string>
    <string name="tripplanner_error_location_not_accessible">Chosen location is not accessible</string>
    <string name="tripplanner_error_geocode_from_ambiguous">Origin is uncertain</string>
    <string name="tripplanner_error_geocode_to_ambiguous">Destination  is uncertain</string>
    <string name="tripplanner_error_geocode_from_to_ambiguous">Origin and destination are uncertain</string>
    <string name="tripplanner_error_triangle">Something went wrong.  Change your bike options and try again</string>
    <string name="customtrip_tripplanner_error_not_defined">Sorry, it\'s not possible to find a trip with the chosen preferences.  Please try again varying some parameters.</string>
    <string name="play_services_error_title">Google Play Services error</string>
    <string name="play_services_error">Can\'t contact Google: the app may not work</string>
    <string name="left_panel_header_optimization">Trip type</string>
    <string name="left_panel_header_travel_mode">Travel mode</string>
    <string name="left_panel_header_bike_options">Bike options</string>
    <string name="left_panel_mode_transit">Transit</string>
    <string name="left_panel_mode_car">Car</string>
    <string name="left_panel_mode_bus">Bus only</string>
    <string name="left_panel_mode_train">Train only</string>
    <string name="left_panel_mode_walk">Walk only</string>
    <string name="left_panel_mode_bicycle">Bicycle</string>
    <string name="left_panel_mode_transit_bicycle">Transit and bicycle</string>
    <string name="left_panel_optimization_quick">Quickest</string>
    <string name="left_panel_optimization_safe">Safest</string>
    <string name="left_panel_optimization_fewest_transfers">Fewest transfers</string>
    <string name="left_panel_optimization_bike_triangle">Custom trip&#8230;</string>
    <string name="about_screen_app_full_name">BusStop for Android</string>
    <string name="about_opentripplanner_screen_app_full_name">OpenTripPlanner for Android</string>
    <string name="about_screen_app_description">An Android app for turistic trip planning and navigation using any OpenTripPlanner server. Based on OpenTripPlanner for Android.</string>
    <string name="about_screen_opentripplanner_app_description">An Android app for multi-modal trip planning and navigation using any OpenTripPlanner server.
See more details at <a href="https://github.com/CUTR-at-USF/OpenTripPlanner-for-Android/wiki">GitHub project page</a>.
</string>
    <string name="about_screen_header_acknowledgements">Acknowledgements</string>
    <string name="about_screen_header_license">License</string>
    <string name="about_screen_acknowledgements">"We'd like to thank the following people for contributing to the project:\n
Marcy Gordon\n
Khoa Tran\n
Sean Barbeau (sjbarbeau@gmail.com)\n
Vreixo Gonzalez\n
Thanks to <a href="http://thenounproject.com">thenounproject.com</a> for the mode icons used in
the buttons and
<a href="http://mapicons.nicolasmollet.com">Nicollas Mollet \"Maps Icons Collection\"</a>
for the map icons.\n Thanks to the Google Summer of Code program for funding development during the
summer of 2013!
This app uses \"Google Play Services Maps API V2\", press below to see license terms."</string>
    <string name="about_screen_button_play_services_license">Play Services license</string>
    <string name="about_screen_license_apache">"Copyright (C) 2010-2014 University of South Florida
and individual contributors.\n
All rights reserved.\n
Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
in compliance with the License. You may obtain
<a href="http://www.apache.org/licenses/LICENSE-2.0">here</a> a copy of the license.\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied."</string>
    <string name="apply">Apply</string>
    <string name="maxDurationCheckboxText">Limit the maximum trip duration</string>
    <string name="maxDurationInputHint">Eg. 30 (Default: 70 min)</string>
    <string name="maxStopsCheckboxText">Limit the maximum transfer number</string>
    <string name="maxStopsInputHint">Eg. 0 (Default: 2)</string>
</resources>